# secrets

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  index.html  index.js.map  shell.nix
.github/workflows/: deploy.yml
api/: Cargo.toml  wrangler.toml
api/src/: lib.rs
client/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/assets/: .gitignore  CNAME  index.html  tailwind.css
client/scripts/: dev-client.sh  make-assets.sh
client/src/: api.ts  crypto.ts  dom.ts  index.ts  url.ts  utils.ts
