[package]
name = "secrets_api"
version = "0.2.1"
edition = "2021"
authors = ["Neal Fennimore <hi@neal.codes>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http'] }
worker-macros = { version = "0.5.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }
uuid = { version = "1.15.1", features = ["v4", "js", "serde"] }
serde_bytes = "0.11.17"
serde = "1.0.219"
serde_json = "1.0.140"
serde_valid = "1.0.5"
